# Modern-Route-Full-Stack-GenerativeAI-And-Agentic-AI-Bootcamp

./: LICENSE  README.md  access-diff-llm-mmllm.ipynb  classical_word_embedding.ipynb  custom_word2vec_training.ipynb  encoding.ipynb  main.py  pyproject.toml  requirements.txt  test.py  transform_notebook_comments.py
.claude/: settings.local.json
.mem0/: config.json
Assignments/Custom Word to Vector/: word2vec_assignment_experiments.py  word2vec_assignment_summary.md
Assignments/Text Feature Engineering/: Report_Observations_and_Conclusions.md  Text_Feature_Engineering.ipynb  flipkart_reviews.csv  word2vec_assignment_experiments.py  word2vec_experiment_results.csv
Data Parsing For RAG/: data_parsing_part1_langchain_data_loaders.ipynb
Data Structures/: Lists.ipynb
Flask/: app.py
Multithreading and Multiprocessing/: factorial_multi_processing.py  multi_processing.py  multi_threading.py  webscrapping_multi_threading.py
Python Crash Course/: 3-Numpy Tutorial.ipynb  Basics of Python.ipynb  Matplotlib.ipynb  Pandas tutorial.ipynb  Python List,Dictionary,Sets etc.ipynb  Seaborn.ipynb  cu.item.txt
crewai/: Basics Crewai.ipynb  Crewai with OPIK Integration.ipynb  app.py  streamlitapp.py
crewai/__pycache__/: streamlitapp.cpython-312.pyc.2165331862000
crewai/crewai-advanced/: .env  .env.example  memtest.py  multimodal-crewai.py
crewai/crewai_demo_python/: README.md  app.py  pyproject.toml  streamlitapp.py
crewai/crewai_demo_python/src/crewai_demo_python/: crew.py  main.py
